k8s/manifests/mysql/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    db: sm-db-deploy
  name: sm-db-deploy
spec:
  selector:
    matchLabels:
      db: social-media
  template:
    metadata:
      labels:
        db: social-media
      name: sm-db-pod-name
    spec:
      containers:
        - name: sm-db-container
          image: mysql:8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: sm-db-pvc
