k8s/manifests/mysql/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sm-db-service
spec:
  selector:
    db: social-media
  ports:
    - port: 3306
      targetPort: 3306
